app/assets/stylesheets/static_pages.css.scss
body {
  padding-top: 70px;
  padding-left: 20px;
  padding-right: 20px;
}
.starter-template {
	padding-top: 20px;
 	text-align: center;
 	//float:left
}
.contact-info {
	margin-top: 20px;
	//float:right;
}

.link-image:hover {
	text-decoration: none;
}

link-image:active {
	text-decoration: none;
}

.projects {
	list-style-type: none;
}

.uc {

	.well {
		padding-top: 0px;
	}

	.section-title {
		text-align: center;
		font-size: 36px;
		padding-bottom: 20px;
	}

	.project-show {
		position: relative;
		min-height: 600px;
	}

	.project-info {
		position: static;
	}

	.project-descrip {
		padding-bottom: 100px;
	}
	
	.downloads {
		position: absolute;
		bottom: 0;
	}

	.simplelist {
		list-style-type: none;
		padding: 0;
		margin: 0;	
	}

	.old-project-show {
		min-height: 600px;
	}

	.old-project-title {
		text-align: center;
		font-weight: bold;
	}



}

#galleria{height:600px;}
#galleria1{height:600px;}
#galleria2{height:600px;}
#galleria3{height:600px;}

.project {
	overflow: hidden;
	position: relative;
	list-style-type: none;
	padding: 10px 10px 10px 164px;
	min-height: 110px;

	.project-title {
		font-weight: bold;
	}
	.project-body {
		width: auto;
		
	}

	.project-body-list {
		list-style-type: none;
	}

	a, a:visited, a:active {
		.project-thumb {
			color: #000;
		}
	}

	.project-thumb {
		position: absolute;
		left: 10px;
		// float: left;
		width: 144px;
		height: 90px;
		img {
			//border-style: solid;
			//border-width: 2px;	
			max-width: 100%;
			//overflow: hidden;
			display: block;
		    margin-left: auto;
		    margin-right: auto;
		}
	}

	.project-source {
		margin-top: 20px;

	} 
}

